syntax = "proto3";
option csharp_namespace="Auth"; 

service Authenticate{

	rpc Login(LoginRequest) returns(Empty);
	rpc RestrictedSource(Empty)returns(AuthorizeResponse);
}

message LoginRequest{
	string username=1;
	string password=2;
}

message Empty{}

message AuthorizeResponse{
	string message=1;
}